# mkdocs-pdf2image-plugin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
mkdocs_pdf2image/: plugin.py
test/simple/: mkdocs.yml
test/simple/docs/: index.md
test/simple/overrides/stylesheets/: extra.css
